# lacrimosa

./: .gitignore  Cargo.toml  DEMO.md  README.md  lacrimosa  verify_auth.sh  verify_cli.sh  verify_dashboards.sh
crates/cz-cli/: Cargo.toml
crates/cz-cli/src/: main.rs
crates/cz-core/: Cargo.toml
crates/cz-core/src/: lib.rs
crates/cz-hub/: Cargo.toml
crates/cz-hub/src/: api.rs  main.rs
crates/cz-hub/src/alerts/: mod.rs
crates/cz-hub/src/auth/: mod.rs
crates/cz-hub/src/connectors/: journal.rs  kafka.rs  mod.rs  nats.rs  registry.rs  webhook.rs
crates/cz-hub/src/dashboards/: mod.rs
crates/cz-hub/src/pipelines/: mod.rs
crates/cz-hub/src/query/: executor.rs  mod.rs  parser.rs
crates/cz-hub/src/traces/: mod.rs
crates/cz-hub/ui/: index.html  package-lock.json  package.json
crates/cz-hub/ui/src/: App.css  App.jsx  index.css
crates/cz-hub/ui/src/components/: AlertsPage.jsx  AnalyticsPage.jsx  Charts.jsx  CommandPalette.jsx  ConnectorsPage.jsx  DashboardsPage.jsx  ExplorerPage.jsx  Gauges.jsx  Headers.jsx  IncidentsPage.jsx  MirrorPage.jsx  OverviewPage.jsx  PipelinesPage.jsx  PlaceholderPage.jsx  QueryConsolePage.jsx  SettingsPage.jsx  Sidebar.jsx  Skeleton.jsx  StatCard.jsx  StatusBar.jsx  TimelineScrubber.jsx  Toast.jsx  TopologyPage.jsx  TracesPage.jsx  VerifyPage.jsx
crates/cz-io/: Cargo.toml
crates/cz-io/src/: cursor.rs  event_loop.rs  ipc.rs  journal.rs  lib.rs
crates/cz-verify/: Cargo.toml
crates/cz-verify/src/: lib.rs
doc/: control-center-decisions.md
