[package]
name = "cz-cli"
version = "0.1.0"
edition = "2021"
description = "LACRIMOSA: The Moat — minimal CLI interface"

[[bin]]
name = "cz"
path = "src/main.rs"

[dependencies]
cz-core = { path = "../cz-core" }
cz-io = { path = "../cz-io" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"
tabled = "0.15"  # For pretty printing tables
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
